welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: not found: value color
  faireV(color.yellow)
         ^MethodsPicture:31: error: not found: value color
  faireV(color.red)
         ^MethodsPicture:32: error: not found: value color
  faireV(color.blue)
         ^MethodsPicture:33: error: not found: value color
  faireV(color.green)
         ^