welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  faireCarre()
}



def faireV(c:Color) {
  avance()
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  
  gauche()
}

def faireCarre() {
  faireV(color.yellow)
  faireV(color.red)
  faireV(color.blue)
  faireV(color.green)
}